<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TodoApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_new">New</string>
    <string name="action_edit">Edit</string>
    <string name="action_login">Login</string>
    <string name="action_sort_prio_first">Sort Prio + Date</string>
    <string name="action_sort_date_first">Sort Date + Prio</string>
    <string name="prio_high">High</string>
    <string name="prio_normal">Normal</string>
    <string name="prio_low">Low</string>
    <string name="btn_ok">OK</string>
    <string name="btn_login">Login</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete">Delete</string>
    <string name="hint_name">Name</string>
    <string name="hint_desc">Description</string>
    <string name="hint_email">user@domain.com</string>
    <string name="hint_pwd">Password</string>
    <string name="warning_icon_desc">Warning</string>

</resources>
